da chinh sua lan 3

--- a/register.html
+++ b/register.html
@@ -85,7 +85,7 @@
                 <!-- Pass  -->
                 <div class="col-6">
                     <div class="mb-3">
-                        <input  class="form-control" name="" id="password" aria-describedby="helpId"
+                        <input type="password" class="form-control" name="" id="password" aria-describedby="helpId"
                             placeholder="Password">
                     </div>
                     <!-- <p id="tbPass"></p> -->
@@ -93,7 +93,7 @@
                 <!-- Pass Confirm  -->
                 <div class="col-6">
                     <div class="mb-3">
-                        <input type="" class="form-control" name="" id="ConfirmPass" aria-describedby="helpId"
+                        <input type="password" class="form-control" name="" id="ConfirmPass" aria-describedby="helpId"
                             placeholder="Password Confirm">
                     </div>
                     <!-- <p id="tbconfirm"></p> -->
@@ -134,7 +134,7 @@
             <div class="row mt-3">
                 <div class="col-6"></div>
                 <div class="col-6">
-                    <button onclick="postAPI()" type="button" value="submit" class="btn btn-danger"id="dangKy">SUBMIT</button>
+                    <button onclick="postAPI()" type="button" value="submit" class="btn btn-danger"id="dangKy"><span>SUBMIT</span></button>
                 </div>
             </div>
         </form>
